--- a/backend/frontend/src/style/Basket.css
+++ b/backend/frontend/src/style/Basket.css
@@ -12,6 +12,7 @@
   border-radius: 0.8rem;
   max-width: 400px;
   margin-left: auto;
+  /* max-height: 60rem; */
 }
 
 .basket {
@@ -201,4 +202,11 @@
 
 .basket-checkout-button:active {
   background-color: var(--button-primary-active-color);
+}
+
+@media (max-width: 420px) {
+  .basket-container {
+    padding: 0;
+    max-height: 50rem;
+  }
 }
