--- a/backend/frontend/src/style/Preferences.css
+++ b/backend/frontend/src/style/Preferences.css
@@ -22,6 +22,8 @@
   background-color: var(--cards-background-color);
   transition: all 0.3s;
   border-radius: var(--cards-border-radius);
+  min-height: 10rem;
+  overflow: hidden;
 }
 
 .favorites-items-container .favorite-card:hover {
@@ -114,4 +116,20 @@
 
 .order-again-items-container .order-again-button:active {
   background-color: var(--button-primary-active-color);
+}
+
+@media (max-width: 480px) {
+  .favorites-items-container {
+    /* display: grid; */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    /* gap: 4rem; */
+    /* padding-top: 2rem; */
+  }
+
+  .order-again-container .order-again-items-container {
+    /* display: grid; */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    /* gap: 4rem;
+  padding-top: 2rem; */
+  }
 }
