--- a/backend/frontend/src/style/RSHomePage.css
+++ b/backend/frontend/src/style/RSHomePage.css
@@ -1,5 +1,10 @@
 /* RSHomePage.css */
 
+.rs-container-profile {
+  margin: 10rem 5rem;
+  min-height: 100vh;
+}
+
 .rs-components {
   height: 80vh;
   margin-top: 7.5rem;
@@ -7,4 +12,59 @@
 
 .rs-content-profile {
   margin-top: 3rem;
+}
+
+.restaurant-nav-profile {
+  border-bottom: 1px solid #ddd;
+  padding: 1rem 0 0;
+}
+
+.restaurant-nav-profile ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+}
+
+.restaurant-nav-profile ul li {
+  padding: 0.5rem 0 0;
+  border-radius: 1.5rem;
+}
+
+.restaurant-nav-profile ul li a {
+  text-decoration: none;
+  padding: 1rem;
+  display: block;
+  transition: background-color 0.3s;
+  color: black;
+}
+
+.restaurant-nav-profile ul li a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.restaurant-nav-profile ul li a:hover {
+  border-bottom: 2px solid black;
+  transform: scale(1.05);
+}
+
+.restaurant-nav-profile ul li a.active {
+  font-weight: bolder;
+  padding: 1rem;
+  border-bottom: 2px solid #163825;
+  color: #163825;
+}
+
+.restaurant-nav-profile ul li button {
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.restaurant-nav-profile ul li button:hover {
+  border-bottom: 2px solid #000;
 }
