--- a/backend/frontend/src/style/RestaurantMenu.css
+++ b/backend/frontend/src/style/RestaurantMenu.css
@@ -141,7 +141,6 @@
 
 .offer-category .offer-total-price .offer-add-button {
   background: var(--button-primary-color);
-
   color: #fbf9f5;
   border: none;
   border-radius: var(--button-border-radius);
@@ -191,6 +190,11 @@
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 
+.item-details .image-and-details {
+  display: flex;
+  align-items: center;
+}
+
 .item-details > div {
   flex-grow: 1;
 }
@@ -216,7 +220,6 @@
 
 .menu-item-card .item-details .add-button {
   background: var(--button-primary-color);
-
   color: #fbf9f5;
   border: none;
   border-radius: var(--button-border-radius);
@@ -233,12 +236,12 @@
   background: var(--button-primary-active-color);
 }
 
-.not-found {
+/* .not-found {
   text-align: center;
   font-size: 1.5em;
   color: #ff0000;
   margin-top: 150px;
-}
+} */
 
 .offer-total-price {
   display: flex;
@@ -271,59 +274,58 @@
 
 /* OFFERS end */
 
-.menu-items {
+/* .menu-items {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-}
+} */
 
-.menu-item-card {
+/* .menu-item-card {
   display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 2rem;
   gap: 2rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+} */
 
-.menu-item-card .item-details {
+/* .menu-item-card .item-details {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   margin: 1rem 0;
   padding: 1rem;
   background-color: white;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
   border-radius: 1rem;
-}
+} */
 
-.item-details:hover {
+/* .item-details:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 1rem rgba(0, 0, 0, 0.15);
-}
+} */
 
-.item-details > div {
+/* .item-details > div {
   flex-grow: 1;
-}
+} */
 
-.item-info img {
+/* .item-info img {
   margin-right: 2rem;
-}
+} */
 
-.item-name {
+/* .item-name {
   font-size: 1.5em;
-}
+} */
 
 /* .item-description {
   font-size: 1rem;
 } */
 
-.item-actions {
+/* .item-actions {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-}
+} */
 
 /* .item-price {
   font-size: 1.2rem;
@@ -349,4 +351,127 @@
   font-size: 1.5em;
   color: var(--button-delete-color);
   margin-top: 15rem;
+}
+
+.restaurant-menu-page-container .floating-basket {
+  display: none;
+}
+
+.restaurant-menu-page-container .cart-logo {
+  display: flex;
+  align-items: center;
+  position: relative;
+  /* color: #266241; */
+  color: var(--button-primary-color);
+  margin-left: 2rem;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.restaurant-menu-page-container .cart-logo .item-count {
+  background-color: var(--color-3);
+  color: black;
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 0.2rem 0.6rem;
+  font-size: 1.2rem;
+  position: absolute;
+  top: -1.2rem;
+  right: -1.1rem;
+}
+
+@media (max-width: 1100px) {
+  .menu-card {
+    max-width: 1000px;
+    width: 90%;
+    /* margin: auto;
+  background: #fff;
+  border: 1px solid #eaeaea;
+  border-radius: var(--cards-border-radius);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+  max-height: 100vh;
+  overflow-y: auto;
+  position: relative; */
+  }
+}
+
+@media (max-width: 980px) {
+  .restaurant-menu-page-container .basket-container {
+    display: none;
+  }
+
+  .main-content {
+    overflow-y: hidden;
+  }
+
+  .restaurant-menu-page-container .menu-card {
+    position: relative;
+  }
+
+  .restaurant-menu-page-container .floating-basket {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 80%;
+    padding: 1rem 2rem;
+    background-color: var(--color-4);
+    border-radius: var(--button-border-radius);
+    box-shadow: 2px 2px 20px rgba(128, 128, 128, 0.61);
+    cursor: pointer;
+  }
+}
+
+/* @media (max-width: 780px) {
+  .restaurant-menu-page-container .floating-basket {
+    left: 70px;
+  }
+}
+
+@media (max-width: 550px) {
+  .restaurant-menu-page-container .floating-basket {
+    left: 45px;
+  }
+} */
+
+@media (max-width: 540px) {
+  .menu-item-card .item-details {
+    /* display: flex; */
+    /* flex-direction: column; */
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    overflow: hidden;
+    padding: 1rem;
+    /* padding-bottom: 2rem; */
+    margin: 3rem 0;
+    /* padding: 1rem;
+  background-color: white;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+  border-radius: var(--cards-border-radius);
+  transition: all 0.3s; */
+  }
+
+  .item-details .image-and-details {
+    width: 100%;
+    gap: 2rem;
+    text-align: left;
+  }
+
+  .item-info img {
+    margin-right: 0;
+    width: 20rem;
+    vertical-align: bottom;
+    display: none;
+  }
 }
