--- a/backend/frontend/src/style/Settings.css
+++ b/backend/frontend/src/style/Settings.css
@@ -10,9 +10,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
   background-color: var(--cards-background-color);
-
   border-radius: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 2rem;
@@ -67,7 +65,8 @@
 
 .settings-save-cancel-button-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .settings-edit {
@@ -87,37 +86,18 @@
 }
 
 .settings-save-cancel-button-container .settings-save {
-  width: 30%;
+  /* width: 30%; */
   padding: var(--button-padding);
   background-color: var(--color-2);
   color: #fff;
   border: 1px solid var(--color-2);
   border-radius: var(--button-border-radius);
-  margin: 0.5rem auto;
+  /* margin: 0.5rem auto; */
   cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
   font-size: 1.6rem;
 }
-
-
-
-/* .settings-cancel {
-
-  width: 36%;
-  padding: 1rem;
-  background-color: #fff;
-  color: var(--color-2);
-  border: 1px solid var(--color-2);
-  border-radius: 0.5rem;
-  font-size: 1.6rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  align-self: center;
-}
-
- */
-
 
 .settings-save:hover {
   background-color: var(--button-primary-hover-color);
@@ -127,9 +107,8 @@
   background-color: var(--button-primary-active-color);
 }
 
-
 .settings-save-cancel-button-container .settings-cancel {
-  width: 30%;
+  /* width: 30%; */
   /* background-color: var(--button-cancel-primary-color);
   background-color: white; */
   background-color: var(--button-secondary-color);
@@ -138,11 +117,11 @@
   padding: var(--button-padding);
   border-radius: var(--button-border-radius);
   cursor: pointer;
-  width: 30%;
+  /* width: 30%; */
   font-size: 16px;
   transition: background-color 0.3s;
   align-self: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 .settings-save-cancel-button-container .settings-cancel:hover {
@@ -153,7 +132,7 @@
   background-color: var(--button-secondary-active-color);
 }
 
-.settings-cancel {
+/* .settings-cancel {
   background-color: white;
   border: 1px solid var(--color-3);
   color: var(--color-3);
@@ -162,7 +141,7 @@
 
 .settings-cancel:hover {
   background-color: #ffe;
-}
+} */
 
 .settings-delete {
   background-color: var(--button-delete-color);
@@ -170,7 +149,7 @@
   display: block;
   margin: 0 auto;
   margin-top: 2rem;
-  width: 40%;
+  /* width: 40%; */
   min-width: 100px;
   padding: var(--button-padding);
   color: white;
@@ -186,4 +165,22 @@
 
 .settings-delete:active {
   background-color: var(--button-delete-active-color);
+}
+
+@media (max-width: 380px) {
+  .settings-save-cancel-button-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    /* justify-content: space-around; */
+  }
+
+  .settings-save-cancel-button-container .settings-save {
+    width: 100%;
+  }
+
+  .settings-save-cancel-button-container .settings-cancel {
+    width: 100%;
+    order: 1;
+  }
 }
